Serverside regex test for valid shortnames. + added docs.

--- a/app/views/shortlink/redirect.html.erb
+++ b/app/views/shortlink/redirect.html.erb
@@ -7,7 +7,7 @@
 <main>
     <%= form_for(@link, url: { action: 'create' }) do |f| %>
         <%= f.label(:name, 'Shortlink name') %>
-        <%= f.text_field(:name, value: @target, disabled: true) %>
+        <%= f.text_field(:name, value: @target) %>
 
         <%= f.label(:url, 'URL') %>
         <%= f.text_field(:url) %>
